--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <!-- Constraint dimens -->
+    <dimen name="constraint_match">0dp</dimen>
+
+    <!-- item_film dimens -->
+    <dimen name="item_film_layout_height">200dp</dimen>
+    <dimen name="item_film_layout_padding">0dp</dimen>
+    <dimen name="item_film_image_width">200dp</dimen>
+    <dimen name="item_film_pagination_text_size">14sp</dimen>
+    <dimen name="item_film_pagination_padding">5dp</dimen>
+    <dimen name="item_film_title_text_size">24sp</dimen>
+    <dimen name="item_film_info_text_size">14sp</dimen>
+    <dimen name="item_film_text_padding">8dp</dimen>
+    <dimen name="item_film_divider">2dp</dimen>
+</resources>
